Modify styles.css to add color to design. Add hover colors for navigation and heading

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <header role="heading">
       <h2>Welcome to Plain Bank!</h2>
-      <h4>We’re so glad you’re ready to join. This should only take a couple minutes. Let’s start by creating your account login</h4>
+      <h4>We’re so glad you’re ready to join. This should only take a couple minutes. Let’s start by creating your account login.</h4>
     </header>
 
     <form>
@@ -41,7 +41,7 @@
           type ='email'
           placeholder="janeplain"
         />
-        </label>
+      </label>
 
         <label for='email'>
           Email address
@@ -50,7 +50,7 @@
            type ='email'
            placeholder="emailhaver@gmail.com"
          />
-         </label>
+         </label><br>
 
         <label for='passphrase'>
           Passphrase
