add identity form and add js to define variables based on user input

--- a/index.html
+++ b/index.html
@@ -162,6 +162,36 @@
 
     </form>
 
+    <form id="identity">
+      <fieldset>
+        <legend>Verify your identity</legend>
+
+        <label for='birthdate'>
+          Date of birth
+        <input
+        id = 'birthdate'
+        type='text'
+        name='birthdate'
+        placeholder='MM/DD/YYYY'
+        />
+        </label>
+
+        <label for='social'>
+          Social security number
+        <input
+        id = 'social'
+        type='text'
+        name='social'
+        placeholder='xxx-xx-xxxx'
+        />
+        </label>
+
+      </fieldset>
+
+      <button type='reset'>Reset the form</button>
+      <button type='submit'>Submit</button>
+    </form>
+
     <section class= "thespot" id= "thespot">
       <p></p>
     </section>
